# CGOL_CLGL_Interop

./: CGOL.cpp  CGOL.h  CMakeLists.txt  Readme.md  gl_cl_util.h  main.cpp  oclkern.h  oglshader.h
